--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div align="center" margin="80px">
 <h1>TRANPAGE</h1>
 <h2>Transformable Single Page Static Web Application.</h2>
- <h3>Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.Can run in any modern browsers and can transform into various web application to suit your needs.</h3>
+ <h3>Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.<br> Can run in any modern browsers and can transform into various web application to suit your needs.</h3>
 </div>
