--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
+<head>
+ <script type="application/ld+json">
+	{
+		"@context": "http://schema.org/",
+		"@graph":
+		[
+			{
+			"@type":"Website",
+			"url": "https://tranpage.github.io/"
+			},
+			{
+			"@type": "Person",
+			"email": "thetechnologyprojects@gmail.com",
+			"name": "Jay C. Angue",
+			"url": "https://tranpage.github.io"
+			},
+			{
+			"@type":"WebPage",
+			"name": "Tranpage",
+			"description": "Transformable Single Page Static Web Application.Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.<br> Can run in any modern browsers and can transform into various web application to suit your needs."
+			}
+			
+		]}
+	</script>
+</head>
+<body>
 <div align="center" margin="80px">
 <h1>TRANPAGE</h1>
 <h2>Transformable Single Page Static Web Application.</h2>
  <h3>Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.<br> Can run in any modern browsers and can transform into various web application to suit your needs.</h3>
 </div>
+</body>
