--- a/index.html
+++ b/index.html
@@ -1,32 +1,72 @@
+<!DOCTYPE html>
+<html>
 <head>
- <script type="application/ld+json">
-	{
-		"@context": "http://schema.org/",
-		"@graph":
-		[
-			{
-			"@type":"Website",
-			"url": "https://tranpage.github.io/"
-			},
-			{
-			"@type": "Person",
-			"email": "thetechnologyprojects@gmail.com",
-			"name": "Jay C. Angue",
-			"url": "https://tranpage.github.io"
-			},
-			{
-			"@type":"WebPage",
-			"name": "Tranpage",
-			"description": "Transformable Single Page Static Web Application.Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.<br> Can run in any modern browsers and can transform into various web application to suit your needs."
-			}
-			
-		]}
-	</script>
+<title>Tranpage</title>
+<style type="text/css">
+	body {
+			text-align:center;
+			margin: 0px;
+			padding: 0px;
+		}
+		p, header, form, div, h1, section, footer, button {
+			margin: 0px;
+			padding: 0px;
+		}
+		div.maind {
+			display: inline-block
+		}
+		
+		#thetitle { font-size: 55px;
+					padding-top: 10px;}
+		
+		#thetitledescription {
+			font-size: 30px;
+			padding-bottom:20px;
+		}
+		#thebenefits {
+			font-size: 35px;
+			padding-top:15px;
+		}
+		#divb {
+			font-size:20px;
+			padding:10px;
+		}
+		#btry {
+			font-size:20px;
+			margin-top:10px;
+			padding: 10px;
+		}
+		#bdown {
+			font-size:20px;
+			margin-top:10px;
+			padding: 10px;
+		}
+		#thereminder {
+			font-size: 20px;
+			padding-top: 30px;
+		}
+</style>
 </head>
-<body>
-<div align="center" margin="80px">
-<h1>TRANPAGE</h1>
-<h2>Transformable Single Page Static Web Application.</h2>
- <h3>Tranpage is a single html file that provides flexible and portable solution to your problems through the use of static web technologies.<br> Can run in any modern browsers and can transform into various web application to suit your needs.</h3>
+<body><div class="div.maind">
+
+<p id="thetitle"><b>Tranpage</b></p>
+<p id="thetitledescription"><i>Use multiple offline web apps in just 1 web page!</i></p>
+<p id="thebenefits"><b>Benefits</b></p>
+<div id="divb">
+<p>No Advertisements!</p>
+<p>Load fast and no delays!</p>
+<p>Can be use with or without internet connection!</p>
+<p>Open it in any web browser that you want!</p>
+</div>
+<p id="thereminder">Try Tranpage Now! No need to sign up or provide an email!.</p>
+<a href="./basictranpage_mv0.01.html"><button id="btry">Use Tranpage for Free!</button></a><br>
+<p id="thereminder">Download Tranpage so you can access it anytime and anywhere. No need to install.</p>
+<a href="https://drive.google.com/uc?export=download&id=0Bx9zzHBbgxu_cVRfWDJsQjNRT1E"><button id="bdown">Download Tranpage for Free!</button></a>
+
+
+
+
 </div>
 </body>
+
+</html>
